[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/healthbar.gd" type="Script" id=1]
[ext_resource path="res://assets/graphic/gui/healthbar_background.png" type="Texture" id=2]
[ext_resource path="res://assets/graphic/gui/healthbar.png" type="Texture" id=3]

[node name="Healthbar" type="Control"]
margin_right = 800.0
margin_bottom = 64.0
script = ExtResource( 1 )

[node name="under_bar" type="TextureProgress" parent="."]
modulate = Color( 0.560784, 0.560784, 0.560784, 1 )
margin_right = 800.0
margin_bottom = 64.0
value = 70.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="top_bar" type="TextureProgress" parent="."]
margin_right = 4.0
margin_bottom = 14.0
value = 50.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="update_tween" type="Tween" parent="."]

[node name="pulse_tween" type="Tween" parent="."]

[node name="flash_tween" type="Tween" parent="."]
